adjust table fixed column z-index (#14036)
fix #13930

--- a/components/date-picker/style/DecadePanel.less
+++ b/components/date-picker/style/DecadePanel.less
@@ -4,7 +4,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 10;
+  z-index: @zindex-picker-panel;
   background: @component-background;
   border-radius: @border-radius-base;
   outline: none;
