--- a/components/drawer/style/drawer.less
+++ b/components/drawer/style/drawer.less
@@ -120,7 +120,7 @@
     position: absolute;
     right: 0;
     top: 0;
-    z-index: 10;
+    z-index: @zindex-popup-close;
     font-weight: 700;
     text-decoration: none;
     transition: color @animation-duration-slow;
